@@ -65,7 +65,7 @@ Thanks:
 * Many thanks to Łukasz Wąsikowski (https://github.com/IdahoPL) for the curl and date display patches
 * Many thanks to booboo-at-gluga-de (https://github.com/booboo-at-gluga-de) for the CRL patch
 * Many thanks to Georg (https://github.com/gbotti) for the fingerprint patch
-* Many thanks to Wim van Ravesteijn (https://github.com/wimvr) for the DER encoded CRL files patch
+* Many thanks to Wim van Ravesteijn (https://github.com/wimvr) for the DER encoded CRL files patch and the OCSP expiring date patch
 * Many thanks to yasirathackersdotmu (https://github.com/yasirathackersdotmu)
 * Many thanks to Christoph Moench-Tegeder (https://github.com/moench-tegeder) for the curl patch
 * Many thanks to Dan Pritts for the --terse patch
